# rokid-openvoice-sdk-deps-protobuf

./: CMakeLists.txt
